Cambios en diseño de login

--- a/src/pages/sing-in/sing-in.scss
+++ b/src/pages/sing-in/sing-in.scss
@@ -1,8 +1,8 @@
 page-sing-in {
 
     .contentSingIn{
-        background-image: linear-gradient(#7B55B9,#ffffff,#ffffff,#ffffff,
-        #ffffff, #7B55B9);
+        background-image: linear-gradient(to bottom right, rgb(123, 85, 185), rgb(123, 85, 185),  rgb(123, 85, 185),
+        rgb(78, 198, 179), rgb(78, 198, 179));
     }
 
     .initial{
