--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,8 @@
 page-login {
 
     .contentLogin{
-        background-image: linear-gradient(#7B55B9,#ffffff,#ffffff,#ffffff,
-        #ffffff, #7B55B9);
+        background-image: linear-gradient(to bottom right, rgb(123, 85, 185), rgb(123, 85, 185),  rgb(123, 85, 185),
+        rgb(78, 198, 179), rgb(78, 198, 179));
     }
 
     .initial{
@@ -11,8 +11,8 @@ page-login {
     }
 
     .imgLogin{
-        width: 35%;
-        height: 28%;
+        width: 40%;
+        height: auto;
     }
 
     .list{
@@ -23,28 +23,19 @@ page-login {
         background-color: #7b55c6;
     }
 
-    .buttonSecondary{
-        margin-top: 15px;
-    }
     .buttonSocial{
-        align-content: center;
         text-decoration: none;
-        padding: 10px;
+        border-radius: 5px;
         font-weight: 550;
         font-size: 15px;
-        padding-left: 15px; 
-        padding-right: 15px; 
-        //border: 1.5px solid #7B55B9;
+        width: 100%;
+        text-transform: none;
     }
     #buttonGoFB{
-        border-top-left-radius: 35px;
-        border-bottom-left-radius: 35px;
-        background-image: linear-gradient(to right, #7B55B9, rgb(233, 221, 255), #ffffff);
+        background-image: #3b5998;
     }
     #buttonGoGoo{
-        border-top-right-radius: 35px;
-        border-bottom-right-radius: 35px;
-        background-image: linear-gradient(to right, #ffffff, rgb(233, 221, 255), #7B55B9);
+        background-color: #db4a39;
     }
     
 }
