Se corrigieron las rutas de las imagenes.

--- a/src/components/drawer-filter/drawer-filter.html
+++ b/src/components/drawer-filter/drawer-filter.html
@@ -1,16 +1,16 @@
 <ion-content>
-    <img src="../../assets/imgs/bg.png"
+    <img src="assets/imgs/bg.png"
     alt="bar" class="img-bar"/>
 
-  <img src="../../assets/imgs/controls.png"
+  <img src="assets/imgs/controls.png"
       alt="controls" class="img-control"/>
 
   <div class="filtro">
     <button class="button-left" (click)="hideFliter()">
-        <img src="../../assets/imgs/customicons/back.png" class="img-back">
+        <img src="assets/imgs/customicons/back.png" class="img-back">
     </button>
     <button class="button-right">
-        <img src="../../assets/imgs/customicons/delete-icon.png" class="img-delete">
+        <img src="assets/imgs/customicons/delete-icon.png" class="img-delete">
     </button>
     <ion-item>
       <ion-label class="label-title"><strong>Filtros</strong></ion-label>
