Se corrigieron las rutas de las imagenes.

--- a/src/components/drawer-user/drawer-user.html
+++ b/src/components/drawer-user/drawer-user.html
@@ -16,19 +16,19 @@
         <ion-row>
           <ion-col>
             <button class="button-opction">
-              <img class="icon-perfil" src="../../assets/imgs/customicons/favoritos.png"/>
+              <img class="icon-perfil" src="assets/imgs/customicons/favoritos.png"/>
               <h4 class="icon-name">Favoritos</h4>
             </button>
           </ion-col>
           <ion-col>
             <button class="button-opction" (click)="goOrder()">
-              <img class="icon-perfil" src="../../assets/imgs/customicons/orden.png"/>
+              <img class="icon-perfil" src="assets/imgs/customicons/orden.png"/>
               <h4 class="icon-name" >Orden</h4>
             </button>
           </ion-col>
           <ion-col>
             <button class="button-opction">
-              <img class="icon-perfil" src="../../assets/imgs/customicons/ofertas.png"/>
+              <img class="icon-perfil" src="assets/imgs/customicons/ofertas.png"/>
               <h4 class="icon-name" >Ofertas</h4>
             </button>
           </ion-col>
@@ -37,19 +37,19 @@
         <ion-row>
             <ion-col>
               <button class="button-opction" (click)="goChat()">
-                <img class="icon-perfil" src="../../assets/imgs/customicons/mensajes.png"/>
+                <img class="icon-perfil" src="assets/imgs/customicons/mensajes.png"/>
                 <h4 class="icon-name">Mensajes</h4>
               </button>
             </ion-col>
             <ion-col>
               <button class="button-opction">
-                <img class="icon-perfil" src="../../assets/imgs/customicons/ayuda.png"/>
+                <img class="icon-perfil" src="assets/imgs/customicons/ayuda.png"/>
                 <h4 class="icon-name">Ayuda</h4>
               </button>
             </ion-col>
             <ion-col>
               <button class="button-opction">
-                <img class="icon-perfil" src="../../assets/imgs/customicons/config.png"/>
+                <img class="icon-perfil" src="assets/imgs/customicons/config.png"/>
                 <h4 class="icon-name">Config</h4>
               </button>
             </ion-col>
