--- a/src/components/header-app/header-app.html
+++ b/src/components/header-app/header-app.html
@@ -2,13 +2,13 @@
 <div class="initial">
     <div id="header" class="bar">
             <button id="search" class="buttonBar">
-                <img src="../../assets/imgs/customicons/search.png" class="icon-bar">
+                <img src="assets/imgs/customicons/search.png" class="icon-bar">
             </button>
             <button id="user" class="buttonBar">
-                <img src="../../assets/imgs/customicons/user.png" class="icon-bar-user">
+                <img src="assets/imgs/customicons/user.png" class="icon-bar-user">
             </button>
             <button id="cart" class="buttonBar">
-                <img src="../../assets/imgs/customicons/shopping-cart.png" class="icon-bar">
+                <img src="assets/imgs/customicons/shopping-cart.png" class="icon-bar">
             </button>
         </div>
 </div>
