Se corrigieron las rutas de las imagenes.

--- a/src/components/drawer-user/drawer-user.html
+++ b/src/components/drawer-user/drawer-user.html
@@ -2,11 +2,11 @@
   
   <div class="user-option">
     <div class="images-user" 
-    [style.background-image]="'url(../../assets/imgs/user-images/' + userImg + ')'">
+    [style.background-image]="'url(assets/imgs/user-images/' + userImg + ')'">
     </div>
     
     <div class = "img-user-small" 
-    [style.background-image]="'url(../../assets/imgs/user-images/' + userImg + ')'">
+    [style.background-image]="'url(assets/imgs/user-images/' + userImg + ')'">
     </div>
 
     <h3 class="name-user">Marco Garcia</h3>
