--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -151,16 +151,16 @@ page-order {
     }
 
     #img-prod1{
-        background-image: url("../../assets/imgs/prueba/producto-1.png");
+        background-image: url("assets/imgs/prueba/producto-1.png");
     }
     #img-prod2{
-        background-image: url("../../assets/imgs/prueba/producto-2.png");
+        background-image: url("assets/imgs/prueba/producto-2.png");
     }
     #img-prod3{
-        background-image: url("../../assets/imgs/prueba/producto-3.png");
+        background-image: url("assets/imgs/prueba/producto-3.png");
     }
     #img-prod4{
-        background-image: url("../../assets/imgs/prueba/producto-4.png");
+        background-image: url("assets/imgs/prueba/producto-4.png");
     }
     
     .icon-card{
@@ -172,16 +172,16 @@ page-order {
     }
 
     #status1{
-        background-image: url("../../assets/imgs/customicons/cancelado.png");
+        background-image: url("assets/imgs/customicons/cancelado.png");
     }
     #status2{
-        background-image: url("../../assets/imgs/customicons/en-proceso.png");
+        background-image: url("assets/imgs/customicons/en-proceso.png");
     }
     #status3{
-        background-image: url("../../assets/imgs/customicons/en-transito.png");
+        background-image: url("assets/imgs/customicons/en-transito.png");
     }
     #status4{
-        background-image: url("../../assets/imgs/customicons/entregado.png");
+        background-image: url("assets/imgs/customicons/entregado.png");
     }
 
     .price{
