se hicieron ajustes en nombre y valor que no se usaban.

--- a/src/components/header-app/header-app.scss
+++ b/src/components/header-app/header-app.scss
@@ -1,4 +1,4 @@
-header {
+header-app {
     
     .bar{
         position: fixed;
@@ -43,8 +43,8 @@ header {
     #search{
         border-bottom-left-radius: 200px;
     }
-    #user{
-    }
+    // #user{
+    // }
     #cart{
         border-bottom-right-radius: 200px;
     }
