--- a/src/components/header-app/header-app.html
+++ b/src/components/header-app/header-app.html
@@ -7,7 +7,7 @@
             <button id="user" class="buttonBar">
                 <img src="assets/imgs/customicons/user.png" class="icon-bar-user">
             </button>
-            <button id="cart" class="buttonBar">
+            <button id="cart" class="buttonBar" (click)="goCart()">
                 <img src="assets/imgs/customicons/shopping-cart.png" class="icon-bar">
             </button>
         </div>
