--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -5,10 +5,20 @@ page-product {
         contain: none !important;
     }
 
+    .buttons{
+        border-radius: 35px;
+    }
+
+    .class-center{
+        text-align: center;
+        top: 50%;
+    }
+
     .mid{
-        contain: layout;
+        //contain: layout;
         background: #eeeeee;
         height: 100%;
+        padding-bottom: 20%;
     }
 
     .div-slides{
@@ -330,6 +340,16 @@ page-product {
             left: 7px !important;
             top: 3px !important;
         }
+    }
+
+    .icon-color-true{
+        zoom: 1.1;
+        color: #7b55c6;
+    }
+
+    .icon-color-false{
+        zoom: 1.1;
+        color: #fff;
     }
 
 }
