Correcciones en pantalla de productos

--- a/src/components/drawer-user/drawer-user.html
+++ b/src/components/drawer-user/drawer-user.html
@@ -48,7 +48,7 @@
               </button>
             </ion-col>
             <ion-col>
-              <button class="button-opction">
+              <button class="button-opction" (click)="goConfig()">
                 <img class="icon-perfil" src="assets/imgs/customicons/config.png"/>
                 <h4 class="icon-name">Config</h4>
               </button>
