--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -6,7 +6,7 @@ page-product {
     }
 
     .buttons{
-        border-radius: 35px;
+        background-color: transparent;
     }
 
     .class-center{
@@ -135,12 +135,11 @@ page-product {
     }
 
     .quantity{
-
         position: absolute;
-        top: 7px;
+        top: 15px;
         bottom: 0;
-        left: 2px;
-	    right: 0;
+        left: calc(50% - 15px);
+        right: 0;
         margin: auto;
         z-index: 20;
         width: 36.66px;
@@ -149,7 +148,7 @@ page-product {
     .price{
         p{
             margin: 0;
-            color: #7B55B9;
+            color: rgb(0, 0, 0);
             font-size: 20px;
             left: calc(50% - 48px);
         }
@@ -220,73 +219,73 @@ page-product {
 
     .check-color1{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(97, 209, 131) !important;
             border-radius: 150px;
             border-width: 0;
         }
         div.checkbox-inner{
-            left: 7px !important;
-            top: 3px !important;
+            left: 10px !important;
+            top: 6px !important;
         }
     }
     .check-color2{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(114, 53, 184) !important; 
             border-radius: 150px;
             border-width: 0;
         }
         div.checkbox-inner{
-            left: 7px !important;
-            top: 3px !important;
+            left: 10px !important;
+            top: 6px !important;
         }
     }
     .check-color3{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(238, 49, 24) !important;
             border-radius: 150px;
             border-width: 0;
         }
         div.checkbox-inner{
-            left: 7px !important;
-            top: 3px !important;
+            left: 10px !important;
+            top: 6px !important;
         }
     }
     .check-color4{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(196, 60, 177) !important;
             border-radius: 150px;
             border-width: 0;
         }
         div.checkbox-inner{
-            left: 7px !important;
-            top: 3px !important;
+            left: 10px !important;
+            top: 6px !important;
         }
     }
     .check-color5{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(83, 161, 197) !important;
             border-radius: 150px;
             border-width: 0;
         }
         div.checkbox-inner{
-            left: 7px !important;
-            top: 3px !important;
+            left: 10px !important;
+            top: 6px !important;
         }
     }
     .check-color6{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;;
+            width: 25px;
+            height: 25px;;
             background-color: rgb(0, 0, 0) !important;
             border-radius: 150px;
             border-width: 0;
@@ -299,14 +298,15 @@ page-product {
 
     .check-size1{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;
+            width: 30px;
+            height: 30px;
             border-width: 0;
         }
         div.checkbox-checked{
             background: #7B55B9;
         }
         div.checkbox-inner{
+            border-color: transparent !important;
             left: 7px !important;
             top: 3px !important;
         }
@@ -314,14 +314,15 @@ page-product {
 
     .check-size2{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;
+            width: 30px;
+            height: 30px;
             border-width: 0;
         }
         div.checkbox-checked{
             background: #7B55B9;
         }
         div.checkbox-inner{
+            border-color: transparent !important;
             left: 7px !important;
             top: 3px !important;
         }
@@ -329,14 +330,15 @@ page-product {
 
     .check-size3{
         div.checkbox-icon{
-            width: 18px;
-            height: 18px;
+            width: 30px;
+            height: 30px;
             border-width: 0;
         }
         div.checkbox-checked{
             background: #7B55B9;
         }
         div.checkbox-inner{
+            border-color: transparent !important;
             left: 7px !important;
             top: 3px !important;
         }
@@ -350,6 +352,29 @@ page-product {
     .icon-color-false{
         zoom: 1.1;
         color: #fff;
+    }
+
+    .primary-grid{
+        .col{
+            padding: 0;
+        }
+    
+        .grid{
+            padding: 0;
+        }
+    
+        p{
+            margin: 0;
+        }
+    }
+
+    .col-color{
+        .grid{
+            padding: 0;
+        }
+        .col{
+            padding: 0;
+        }
     }
 
 }
