--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -191,6 +191,57 @@ page-start {
         opacity: 0;
     }*/
 
+        /*CLASES MOVIMIENTO FILTER*/
+
+        .idle{
+
+            transform: translate(300px, 0px);
+            transition: all 2s;
+
+        }
+
+        .left{
+
+            transform: translate(0px, 0px);
+            transition: all 2s;
+
+        }
+
+        /*CLASES FONDO FILTER*/
+
+        .backgroundBlack{
+            width: 600px;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.493);
+            position: absolute;
+        }
+        
+        .backgroundNoColor{
+            display: none;
+        }
+
+        //
+
+        .fakeButtonInitial{
+            background-color: transparent;
+            z-index: 99;
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 45%;
+            right: 0%;
+        }
+        
+        .fakeButtonLeft{
+            background-color: transparent;
+            z-index: 99;
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 45%;
+            left: 8%;
+        }
+
 }
 
 
