--- a/src/components/drawer-category/drawer-category.html
+++ b/src/components/drawer-category/drawer-category.html
@@ -11,7 +11,7 @@
 
   <div class="divCat">
     <div class="scroll-content" id="cardCategories">
-      <ion-card class="cards" *ngFor="let category of categ" 
+      <ion-card class="cards" *ngFor="let category of categories" 
       tappable (click)="viewCat(category)">
         <div class="imgCard">
             <img class="imgCategory" *ngIf="category.id == 1" 
