--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -195,15 +195,15 @@ page-start {
 
         .idle{
 
-            transform: translate(300px, 0px);
-            transition: all 2s;
+            transform: translate(82.75%, 0px);
+            transition: all 0.7s;
 
         }
 
         .left{
 
             transform: translate(0px, 0px);
-            transition: all 2s;
+            transition: all 0.7s;
 
         }
 
