--- a/src/components/drawer-user/drawer-user.html
+++ b/src/components/drawer-user/drawer-user.html
@@ -15,7 +15,7 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <button class="button-opction">
+            <button class="button-opction" (click)="goFavorite()">
               <img class="icon-perfil" src="assets/imgs/customicons/favoritos.png"/>
               <h4 class="icon-name">Favoritos</h4>
             </button>
