Implementado Buscador en el header

--- a/src/components/header-app/header-app.html
+++ b/src/components/header-app/header-app.html
@@ -1,7 +1,7 @@
 <!-- Generated template for the HeaderComponent component -->
 <div class="initial">
     <div id="header" class="bar">
-            <button id="search" class="buttonBar">
+            <button id="search" class="buttonBar" (click)="showSearch()">
                 <img src="assets/imgs/customicons/search.png" class="icon-bar">
             </button>
             <button id="user" class="buttonBar">
