--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -225,21 +225,21 @@ page-start {
         .fakeButtonInitial{
             background-color: transparent;
             z-index: 99;
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            top: 45%;
             right: 0%;
+            position: fixed;
+            height: 25%;
+            width: 12.5%;
+            top: 35.5%;
         }
         
-        .fakeButtonLeft{
+        .fakeButtonLeft {
             background-color: transparent;
             z-index: 99;
-            width: 50px;
-            height: 50px;
+            width: 17.5%;
+            height: 100%;
             position: absolute;
-            top: 45%;
-            left: 8%;
+            top: 0;
+            left: 0;
         }
 
 }
