Creado diseño y conexión para consulta de ordenes

--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,11 +1,20 @@
 page-order {
+    
+    background-color: #eeeeee;
+
     .scroll-content {
         padding: 0px !important;
         contain: none !important;
     }
 
-    ion-card-content{
-        text-align: center;
+    .div-status{
+        margin-top: 10%;
+    }
+
+    .order-bot{
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 10px;
         background-image: linear-gradient(#ffffff, #e0e0e0);
     }
 
@@ -118,7 +127,7 @@ page-order {
     
     .card-order{
         margin-top: 20%;
-        margin-bottom: 20%;
+        margin-bottom: 0;
     }
 
     .card{
@@ -157,9 +166,8 @@ page-order {
     }
 
     .icon-status{
-        margin-top: 10px;
-        width: 50px;
-        height: 50px;
+        width: auto;
+        height: 80px;
         text-align: center;
     }
 
@@ -176,4 +184,23 @@ page-order {
         vertical-align: middle;
     }
 
+    .custom-grid{
+        .col{
+            padding: 0;
+        }
+        .grid{
+            padding: 0;
+        }
+        .row{
+            padding: 0;
+        }
+    }
+
+    .swiper-pagination {
+        //top: 110px;
+    }
+
+    ion-card img {
+        display: initial;
+    }
 }
