--- a/src/components/drawer-user/drawer-user.html
+++ b/src/components/drawer-user/drawer-user.html
@@ -42,7 +42,7 @@
               </button>
             </ion-col>
             <ion-col>
-              <button class="button-opction">
+              <button class="button-opction" (click)="goAbout()">
                 <img class="icon-perfil" src="assets/imgs/customicons/ayuda.png"/>
                 <h4 class="icon-name">Ayuda</h4>
               </button>
