--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,9 @@
 page-about {
-
+    .boxBorders{
+        margin-top: 16%;
+        border: 2px solid;
+        border-radius: 2px;
+        border-color: rgb(228, 228, 228);
+        width: 100%;
+    }
 }
