--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -7,7 +7,7 @@ page-start {
 
     ion-card-content{
         text-align: center;
-        background-image: linear-gradient(#ffffff, #e0e0e0);
+        //background-image: linear-gradient(#ffffff, #e0e0e0);
     }
 
     .initial{
@@ -16,7 +16,7 @@ page-start {
 
     .mid{
         contain: layout;
-        background: #eeeeee
+        background: #d6d6d6
     }
 
     .div-slides{
@@ -40,15 +40,6 @@ page-start {
 
     .title-search{
         padding-top: 15px;
-        text-align: center;
-    }
-
-    .card{
-        margin-bottom: 11.5%;
-    }
-    .imgCard{
-        max-width: 100%;
-        max-height: 50%;
         text-align: center;
     }
 
@@ -119,9 +110,16 @@ page-start {
         background-image: linear-gradient(#40188F, #7B55B9);*/
     }
     #categoy{
+        position: absolute;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        margin-top: 17%;
         font-size: 15px;
         color: #ffffff;
-        padding: 0;
+        //padding: 0;
     }
     /*#catBut{
         font-weight: 600;
@@ -241,6 +239,70 @@ page-start {
             top: 0;
             left: 0;
         }
+
+    .div-card-parent{
+        margin-top: 5px;
+        margin-bottom: 24%;
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+
+    .div-card-child{
+        //margin-top: 5px;
+        //margin-bottom: 17%;
+        //column-count: 2;
+        //padding-left: 10px;
+        //padding-right: 10px;
+        width: 50%;
+        float: left;
+        //padding-bottom: 12%;
+    }
+
+    .div-card-load{
+        width: 100%;
+        float: left;
+        height: 15%;
+        margin-bottom: 17%;
+    }
+
+    .products{
+        // float: left;
+        //width: 50%;
+        //display: inline-block;
+        padding: 3px;
+    }
+
+    .products-int{
+        margin: 3px;
+        background-color: #ffffff;
+        border-radius: 5px;
+        border-radius: 5px;
+    }
+
+    .imgCard{
+        max-width: 100%;
+        max-height: 50%;
+        text-align: center;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+    }
+    
+    .precio{
+        text-align: left;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 18px;
+        margin:0
+    }
+
+    .titulo{
+        margin: 2px 0 0 0;
+        text-align: left;
+        font-size: 14px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #6e6e6e;
+        line-height: 18px
+    }
 
 }
 
