--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -308,6 +308,78 @@ page-start {
         padding: 10px;
     }
 
+    .tutorial{
+        width: 100%;
+        height: 100%;
+        background: rgba(46, 13, 95, 0.671);
+        z-index: 20;
+        position: absolute;
+    }
+
+    .font-tutorial-big{
+        float: left;
+        color: #fff;
+        //font-family: 'Open Sans';
+        font-weight: 100;
+        font-size: 35px;
+        margin-left: 8px;
+        margin-right: 8px;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 2px;
+    }
+
+    .font-tutorial-normal{
+        float: left;
+        color: #fff;
+        //font-family: 'Open Sans';
+        font-weight: 100;
+        font-size: 26px;
+        word-spacing: 4px;
+        margin-left: 11px;
+        margin-right: 8px;
+        margin-top: 10px;
+        margin-bottom: 2px;
+    }
+
+    .info-tuto{
+        position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    height: 30%;
+	    width: 90%;
+	    margin: -15% 0 0 -45%;
+    }
+
+    .flecha-1{
+        position: absolute;
+        top: 56%;
+        left: 54%;
+        width: 18%;
+        height: 33%;
+    }
+    .flecha-2{
+        position: absolute;
+        top: 69%;
+        right: 51%;
+        width: 8%;
+        height: 20%;
+    }
+    .flecha-3{
+        position: absolute;
+        width: 13%;
+        height: 31%;
+        top: 10%;
+        right: 64%;
+    }
+    .flecha-4{
+        position: absolute;
+        top: 46%;
+        left: 35%;
+        width: 50%;
+        height: 20%;
+    }
+
 }
 
 
