ultimo cambios tutorial

--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -377,4 +377,11 @@ page-product {
         }
     }
 
+    .toast-test{
+        background: #7B55B9;
+        > div{
+            background-color:#32db64!important;
+        }
+    }
+
 }
