--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,18 @@
 page-login {
 
+    .fondo-all{
+        position: relative;
+        height: auto;
+        width: 100%;
+    }
+
     .contentLogin{
-        background-image: linear-gradient(to bottom right, rgb(123, 85, 185), rgb(123, 85, 185),  rgb(123, 85, 185),
-        rgb(78, 198, 179), rgb(78, 198, 179));
+        background-image: url(../assets/imgs/inicio-fondo-sin-logo.png);
+        height: 100%;
+        width: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
     }
 
     .initial{
@@ -10,32 +20,82 @@ page-login {
         margin-bottom: 10%;
     }
 
+    .img-logo{
+        float: left;
+    }
+
     .imgLogin{
-        width: 40%;
+        width: 30%;
         height: auto;
     }
 
-    .list{
-        margin-top: 7%;
+    .goGoo{
+        margin-top: 20px;
+        float: left;
+    }
+
+    .goFace{
+        margin-top: 20px;
+        float: left;
+        text-align: center;
+    }
+
+    .icono-google{
+        margin-left: 17.5%;
+        float: left;
+        width: 11.5%;
+        height: auto;
+    }
+
+    .letras-icono-google{
+        float: left;
+        text-align: left;
+        margin-top: 6.5px;
+        color: #fff;
+        margin-left: 10px;
+    }
+
+    .icono-facebook{
+        margin-left: 17.5%;
+        float: left;
+        width: 10%;
+        height: auto;
+    }
+
+    .letras-icono-facebook{
+        float: left;
+        text-align: left;
+        margin-top: 6.5px;
+        color: #fff;
+        margin-left: 10px;
+    }
+
+    .item-input{
+        background-color: transparent;
+    }
+
+    .item-block{
+        background-color: transparent;
+    }
+
+    input{
+        color: #fff;
+    }
+
+    .letras-button{
+        color: #7B55B9;
+        font-size: 12.5px;
     }
 
     .buttonLogin{
-        background-color: #7b55c6;
-    }
-
-    .buttonSocial{
-        text-decoration: none;
-        border-radius: 5px;
-        font-weight: 550;
-        font-size: 15px;
-        width: 100%;
-        text-transform: none;
-    }
-    #buttonGoFB{
-        background-image: #3b5998;
-    }
-    #buttonGoGoo{
-        background-color: #db4a39;
+        margin-top: 15px;
+        width: 100px;
+        height: 35px;
+        background-color: #fff;
+        border-top-left-radius: 100px;
+        border-bottom-left-radius: 15px; 
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 100px; 
     }
     
 }
