--- a/src/pages/jivo-chat/jivo-chat.scss
+++ b/src/pages/jivo-chat/jivo-chat.scss
@@ -1,3 +1,16 @@
 page-jivo-chat {
+    ion-content{
+        font-family: "Open Sans light";
+    }
 
+    .div-alquio-img{
+
+        margin-top: 60px;
+
+    }
+
+    .title-nomessages{
+        font-weight: bold;
+        font-size: 19px;
+    }
 }
