--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -158,7 +158,7 @@ page-order {
     .price{
         margin-top: 10px;
         text-align: left;
-        color: rgb(126, 126, 126)
+        color: rgb(126, 126, 126);
     }
 
     .value-price{
