--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,9 +1,6 @@
-page-about {
-    .boxBorders{
-        margin-top: 16%;
-        border: 2px solid;
-        border-radius: 2px;
-        border-color: rgb(228, 228, 228);
-        width: 100%;
+page-about{
+    border-radius: 25px;
+    h2{
+        text-align: center;
     }
 }
