--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -98,6 +98,15 @@ page-cart {
         color: #ffffff;
         padding: 0;
     }
+
+    .texto-de-vacio{
+        font-size: large;
+        margin-block-start: 0em;
+        margin-block-end: 0.5em;
+    }
     
+    .boton-inicio{
+        padding: 0px 0px;
+    }
 
 }
