--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -7,10 +7,6 @@ page-order {
         contain: none !important;
     }
 
-    .div-status{
-        margin-top: 10%;
-    }
-
     .order-bot{
         padding-left: 20px;
         padding-right: 20px;
@@ -140,8 +136,8 @@ page-order {
     }
 
     .img-card{
-        width: 100%;
-        height: 100%;
+        width: auto;
+        height: 90px;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: 50% 50%;
@@ -156,7 +152,7 @@ page-order {
     }
 
     .price{
-        margin-top: 10px;
+        margin-top: 5px;
         text-align: left;
         color: rgb(126, 126, 126);
     }
@@ -167,7 +163,7 @@ page-order {
 
     .icon-status{
         width: auto;
-        height: 80px;
+        height: 70px;
         text-align: center;
     }
 
@@ -202,5 +198,10 @@ page-order {
 
     ion-card img {
         display: initial;
+    }
+
+    hr {
+        margin-block-start: 0.1em;
+        margin-block-end: 0.1em;
     }
 }
