--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -1,7 +1,7 @@
 page-product {
 
     ion-content{
-        font-family: "Open Sans light";
+        //font-family: "Open Sans light";
     }
 
     .my-segment{
